<resources>
    <string name="app_name">NavegadorAgricola</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="iniciar_sesi_n">Iniciar Sesión</string>
    <string name="registrarse">Registrarse</string>
    <string name="button7">Button</string>
    <string name="button6">Button</string>

    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="textview">TextView</string>
    <string name="prueba" />
    <string name="prueeeba">prueba</string>
    <string name="button10">Button</string>
    <string name="navegator_browser">Navegator Browser</string>
    <string name="scalvc01_estudiantes_unileon_es">scalvc01@estudiantes.unileon.es</string>
    <string name="contrase_a">contraseña</string>
    <string name="iniciar_sesion">Iniciar sesión</string>
    <string name="name_registro">Name</string>
    <string name="nombre_registro">Nombre</string>
    <string name="izq_metros">Name</string>
    <string name="checkedtextview">CheckedTextView</string>
    <string name="multiautocompletetextview">MultiAutoCompleteTextView</string>
    <string name="NombreFinca">CheckedTextView</string>
    <string name="superficie">Superficie</string>
    <string name="nombre_de_la_finca">Nombre de la Finca</string>
    <string name="trabajo_a_realizar">Trabajo a realizar</string>
    <string name="name">Name</string>
    <string name="Nombre_Finca">Name</string>
    <string name="introducir_ha">Introducir ha</string>
    <string name="introducir_nombre">Introducir nombre</string>
    <string name="izquierda">Izquierda</string>
    <string name="derecha">Derecha</string>
    <string name="tarea_a_realizar">tarea a realizar</string>

</resources>
